# language_study

./: .gitignore  README.md
algorithm/: p2531.go
c_learning/tools/: api_tool.c  json.cpp
c_qt/: CMakeLists.txt  main.cpp  mainwindow.ui
c_shell_client/: README.txt
go_learning/: README.en.md  go.mod
go_learning/goBase/: go_test.go
go_learning/go_base/: README.md  go.mod  go.sum
go_learning/go_beego/: go.mod  go.sum
go_learning/wikis/: wiki_db.go  wiki_db_2.go
go_learning2/: go.mod  main.go
nydia_tools/: .gitignore  .qiniu_pythonsdk_hostscache.json  1.txt  LICENSE  README.en.md  README.md  manage.py  package-lock.json  tools_json.txt
nydia_tools/files/: file_upload_qiniu.py  models.py  urls.py  views.py
nydia_tools/nydia_tools/: asgi.py  settings.py  urls.py  wsgi.py
nydia_tools/ocrs/: apps.py  urls.py  views.py
nydia_tools/requirements/: requirements-20240421.txt  requirements-deploy-20240421-add.txt  requirements-deploy-20240421.txt  requirements-deploy-add.txt  requirements-deploy-python3.11.11.txt  requirements-deploy-python3.11.4.txt  requirements-deploy-python3.11.txt  requirements-deploy-python3.13-add.txt  requirements-deploy-python3.13.txt  requirements.txt
nydia_tools/tools/: tests.py  urls.py  views.py
python-server-dashboard/: README.md  pom.xml
python-server-dashboard/dashboard-admin-java/: Dockerfile  pom.xml
python-server-dashboard/dashboard-web-python/: .dockerignore  Dockerfile_python  Dockerfile_ubuntu  main_v2.py  main_v3.py  server_startup.sh
python-server-dashboard/dashboard-web-python2/: Dockerfile  main_v2.py  server_startup.sh
python-server-dashboard/deploy/: Jenkinsfile_admin  Jenkinsfile_web  Jenkinsfile_web_python2  deploy_web_docker.sh  deploy_web_python2_docker.sh
python-server-dashboard/schema/: schema.sql
python_learning/: README.md
python_learning/bluetooth/: bluetooth_test.py  bluetooth_test2.py
rust_contract/: Cargo.toml
rust_contract2/: Cargo.toml
rust_game/: Cargo.toml
rust_learning/: Cargo.toml
vue-uniapp/: README.md
(+247 files in other folders)
